--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.0",
     "knex": "^0.16.3",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
