Create api for create patient and integrate with front end

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
+    "nanoid": "^2.0.1",
     "objection": "^1.6.0"
   }
 }
