--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "react-transition-group": "^2.6.0"
+    "react-transition-group": "^2.6.0",
+    "recharts": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
