--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "antd": "^3.14.1",
     "axios": "^0.18.0",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.1.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
