Allow sending of SMS using aws sns

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jonathanfrancisco/dental-clinic-management-system#readme",
   "dependencies": {
+    "aws-sdk": "^2.437.0",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
