--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,14 @@
   "dependencies": {
     "antd": "^3.14.1",
     "axios": "^0.18.0",
+    "bizcharts": "^3.5.2",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.1.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
-    "react-transition-group": "^2.6.0",
-    "recharts": "^1.5.0"
+    "react-transition-group": "^2.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
