--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
     "nanoid": "^2.0.1",
+    "nodemailer": "^6.1.1",
     "objection": "^1.6.0",
     "twilio": "^3.30.1"
   },
