Configure to production. Version 1.0

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=mathematics
+DB_HOST=andresdentalclinic-dcms-db.crgk5hft5mui.us-east-1.rds.amazonaws.com
+DB_USER=dcmscapstone
+DB_PASS=dcmscapstone
 DB_NAME=dcms
 AWS_ACCESS_KEY_ID=ASIA4PSD6FI4JNVKACFG
 AWS_SECRET_ACCESS_KEY=DtTkQ69TY1qeRcVQRDGZz6ZL5SPh/8UzxE/xbYaf
