--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Capstone Project (Thesis)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "node index.js",
+      "heroku-postbuild": "cd react-ui && npm install --only=dev && npm install && npm run build",
+       "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
