--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Capstone Project (Thesis)",
   "main": "index.js",
   "scripts": {
-      "start": "node index.js",
-      "heroku-postbuild": "cd react-ui && npm install --only=dev && npm install && npm run build",
-       "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "heroku-postbuild": "cd react-ui && npm install --only=dev && npm install && npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "nanoid": "^2.0.1",
     "nodemailer": "^6.1.1",
     "objection": "^1.6.0",
+    "react-scroll": "^1.7.11",
     "twilio": "^3.30.1"
   },
   "devDependencies": {
