--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-scroll": "^1.7.11",
     "react-transition-group": "^2.6.0"
   },
   "scripts": {
