--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -10,6 +10,7 @@
     "jspdf-autotable": "^3.1.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-responsive": "^6.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-scroll": "^1.7.11",
