--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/jonathanfrancisco/dental-clinic-management-system#readme",
   "dependencies": {
     "aws-sdk": "^2.437.0",
-    "bcrypt": "^3.0.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
@@ -32,6 +32,7 @@
     "nanoid": "^2.0.1",
     "nodemailer": "^6.1.1",
     "objection": "^1.6.0",
+    "pg": "^8.0.3",
     "react-scroll": "^1.7.11",
     "twilio": "^3.30.1"
   },
