--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ TWILIO_ACCOUNT_SID=ACe764d2a0e50b66bb9278ca26c7f17569
 TWILIO_AUTH_TOKEN=2660d06148fce31e1fc1c70a1454d917
 GMAIL_EMAIL=andresdentalclinictest@gmail.com
 GMAIL_PASSWORD=andresclinic
+COOKIES_SECRET=thesis
